--- a/index.html
+++ b/index.html
@@ -72,13 +72,12 @@
       <h2>Our Team</h2>
       <section>
         <ul>
-          <!--!!!!!!!!!!!! -->
 
           <li>
             <img
               src="./Images/mark.jpg"
               alt="photo Mark"
-              with="264"
+              width="264"
               height="260"
             />
             <h3>Mark Guerro</h3>
@@ -88,7 +87,7 @@
             <img
               src="./Images/tom.jpg"
               alt="photo Tom"
-              with="264"
+              width="264"
               height="260"
             />
             <h3>Tom Ford</h3>
@@ -98,7 +97,7 @@
             <img
               src="./Images/camila.jpg"
               alt="photo Camila"
-              with="264"
+              width="264"
               height="260"
             />
             <h3>Camila Garcia</h3>
@@ -108,7 +107,7 @@
             <img
               src="./Images/daniel.jpg"
               alt="photo Daniel"
-              with="264"
+              width="264"
               height="260"
             />
             <h3>Daniel Wilson</h3>
