--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">webstudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -37,6 +37,7 @@
       </section>
 
       <section>
+        <h2>our goal</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -53,7 +54,7 @@
             </p>
           </li>
           <li>
-            <h3>Diligance</h3>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
@@ -69,10 +70,10 @@
         </ul>
       </section>
 
-      <h2>Our Team</h2>
+      
       <section>
+        <h2>Our Team</h2>
         <ul>
-
           <li>
             <img
               src="./Images/mark.jpg"
