--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
         <ul>
           <li>
             <img
-              src="./Images/mark.jpg"
+              src="./images/mark.jpg"
               alt="photo Mark"
               width="264"
               height="260"
             />
-            <h3>Mark Guerro</h3>
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
