--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </li>
           <li>
             <img
-              src="./Images/tom.jpg"
+              src="./images/tom.jpg"
               alt="photo Tom"
               width="264"
               height="260"
@@ -96,7 +96,7 @@
           </li>
           <li>
             <img
-              src="./Images/camila.jpg"
+              src="./images/camila.jpg"
               alt="photo Camila"
               width="264"
               height="260"
@@ -106,7 +106,7 @@
           </li>
           <li>
             <img
-              src="./Images/daniel.jpg"
+              src="./images/daniel.jpg"
               alt="photo Daniel"
               width="264"
               height="260"
